# rspin

./: Cargo.toml  DEVELOPMENT.md  LICENSE  NIRI_SETUP.md  README.md  TECHNICAL.md  default.nix  flake.nix  shell.nix  stack.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
packaging/: README.md
packaging/arch/: PKGBUILD  PKGBUILD.local
scripts/: build-packages.sh  install.sh  uninstall.sh
src/: app.rs  cli.rs  image_loader.rs  main.rs  shader.wgsl  wayland.rs  wgpu_renderer.rs
