[package]
name = "rspin"
version = "0.1.1"
edition = "2021"
description = "A desktop sticky image viewer for Wayland"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/dashu041120/rspin"
homepage = "https://github.com/dashu041120/rspin"
keywords = ["wayland", "image-viewer", "overlay", "wgpu"]
categories = ["multimedia::images"]

[package.metadata.deb]
maintainer = "dashu041120"
copyright = "2024-2025, dashu041120"
section = "graphics"
priority = "optional"
depends = "libwayland-client0, libxkbcommon0"
suggests = "wl-clipboard | xclip"
assets = [
    ["target/release/rspin", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/rspin/", "644"],
]

[package.metadata.generate-rpm]
name = "rspin"
license = "MIT"
assets = [
    { source = "target/release/rspin", dest = "/usr/bin/rspin", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/rspin/README.md", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]
wayland = "*"
libxkbcommon = "*"

[dependencies]
# Wayland client toolkit
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system"] }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }

# GPU rendering
wgpu = "0.19"
raw-window-handle = "0.6"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Image handling
image = "0.25"

# Command line parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# For reading from stdin
atty = "0.2"

# Memory mapping for shared memory
memmap2 = "0.9"

# Text rendering
cosmic-text = "0.12"
